hphp/test/zend/good/tests/classes/final_abstract.php.expectf

Fatal error: Class fail contains an abstract method and must therefore be declared abstract in %s/final_abstract.php on line 3
